--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 2.12.9 (unreleased)
+* Version 2.12.9 (released 2011-08-21)
 
 ** libgnutls-extra: Replaced enumeration with unsigned
 int, in openssl.h to make it identical to the 3.0.0 version.
