--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -164,16 +164,16 @@
 	url = "http://www.ietf.org/rfc/rfc3280.txt"
 }
 
-@Misc{ SSL3,
+@Misc{SSL3,
 	author = "Alan Freier and Philip Karlton and Paul Kocher",
-	title = "The {SSL} Protocol Version 3.0",
-	month = "November",
+	title = "The Secure Sockets Layer (SSL) Protocol Version 3.0",
+	month = "August",
 	year = "2011",
-	note = "Available from \url{http://tools.ietf.org/html/draft-mavrogiannopoulos-ssl-version3-06}",
-	url = "http://tools.ietf.org/html/draft-mavrogiannopoulos-ssl-version3-06"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc6101.txt}",
+	url = "http://www.ietf.org/rfc/rfc6101.txt"
 }
 
-@Misc{ PKCS12,
+@Misc{PKCS12,
 	author = "RSA Laboratories",
 	title = "{PKCS 12 v1.0}: Personal Information Exchange Syntax",
 	month = "June",
