--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -297,3 +297,12 @@
  publisher = {John Wiley \& Sons, Inc.},
  address = {New York, NY, USA},
 } 
+
+@misc{PKCS11URI,
+  author="Jan Pechanec and Darren J. Moffat",
+  title="{The PKCS 11 URI Scheme}",
+  month="August",
+  year=2011, 
+  note = "Work in progress, available from \url{http://tools.ietf.org/html/draft-pechanec-pkcs11uri-05}",
+  url = "http://tools.ietf.org/html/draft-pechanec-pkcs11uri-05"
+}
