--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -214,6 +214,7 @@ functions resemble the POSIX @code{recv} and @code{send}
 functions.
 
 @showfuncdesc{gnutls_record_send}
+
 @showfuncdesc{gnutls_record_recv}
 
 In DTLS it is adviceable to use the extended receive
@@ -225,8 +226,7 @@ messages may arrive out of order.
 
 A helper function is available to check whether data
 to be read are pending in a @acronym{GnuTLS} session.
-This is the equivalent in POSIX systems to using @code{select} 
-for data waiting to be read by @code{recv}.
+This is the equivalent of @code{select} in @acronym{POSIX} systems.
 
 @showfuncdesc{gnutls_record_check_pending}
 
@@ -496,8 +496,8 @@ redefining them.
 @subsection Simple datagram @acronym{TLS} client example
 
 This is a client that uses @acronym{UDP} to connect to a
-server. This is the @acronym{DTLS} equivalent to 
-@ref{Simple client example with X.509 certificate support} above.
+server. This is the @acronym{DTLS} equivalent to the example
+in @ref{Simple client example with X.509 certificate support}.
 
 @verbatiminclude examples/ex-client-udp.c
 
