--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.0.2 (unreleased)
 
+** gnutls-cli: Benchmark applications were incorporated
+with it.
+
 ** libgnutls: Corrected parsing of XMPP subject
 alternative names.
 
