--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -236,8 +236,17 @@
 	title = "{Using OpenPGP Keys for Transport Layer Security (TLS) Authentication}",
 	month = "February",
 	year = "2011",
-	note = "Available from \url{http://tools.ietf.org/html/rfc6091}",
-	url = "http://tools.ietf.org/html/rfc6091"
+	note = "Available from \url{http://www.ietf.org/rfc/rfc6091.txt}",
+	url = "http://www.ietf.org/rfc/rfc6091.txt"
+}
+
+@Misc{ RFC4821,
+	author = "Matt Mathis and John Heffner",
+	title = "{Packetization Layer Path MTU Discovery}",
+	month = "March",
+	year = "2007",
+	note = "Available from \url{http://www.ietf.org/rfc/rfc4821.txt}",
+	url = "http://www.ietf.org/rfc/rfc4821.txt"
 }
 
 @Misc{ TLSCOMP,
